fixed overflow issue on tab change

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -26,6 +26,7 @@ body {
     font-size: 4rem;
   }
   font-family: "Source Sans Pro", sans-serif;
+  overflow: hidden;
 }
 
 button {
